Fixed some screen overflow scrolling issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
-.app {
+* {
     box-sizing: border-box;
+}
+
+.app {
     text-align: center;
 }
 
