--- a/client/src/pages/boardRoom/BoardRoom.css
+++ b/client/src/pages/boardRoom/BoardRoom.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 .board-container {
