--- a/client/src/pages/connectionRoom/ConnectionRoom.css
+++ b/client/src/pages/connectionRoom/ConnectionRoom.css
@@ -2,6 +2,6 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
